--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,8 @@
     <body>
         <div class="main-content">
              {{>header}} 
-             <img class="portrait" src="/img/me.png">
+             <p>This site was created by sahil setia.</p>
+             <img class="portrait" src="/img/sahil.png">
         </div>
         
         <p>Create By {{name}}</p>
